--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     -->
 
-    <h1>Hello world!</h1>
+    <h1>Hello world, we are developers</h1>
     <p>Trial</p>
     <script src="js/index.js"></script>
   </body>
