--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
     -->
 
-    <h1>Hello,world!</h1>
+    <h1>Hello world!</h1>
+    <p>Trial</p>
     <script src="js/index.js"></script>
   </body>
 </html>
