--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
     -->
 
-    <h1>Hello world!</h1>
-    <p>Trial</p>
+    <h1>Hello, world!</h1>
     <script src="js/index.js"></script>
   </body>
 </html>
